--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,3 +98,14 @@ h6 {
   }
 
 }
+
+.container {
+  max-width: 1443px;
+  width: 100%;
+  margin: 0 auto;
+
+  @media (max-width: 768px) {
+    width: 95%;
+  }
+
+}
