--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,6 +38,7 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   background-color: #191919;
+  overflow-x: hidden;
 }
 
 input,
@@ -87,14 +88,17 @@ h6 {
 }
 
 .page {
-  padding: 16px;
+  margin: 16px;
+  min-height: 100dvh;
+  border-radius: 100px 100px 0 0;
+  overflow: hidden;
 
   @media (max-width: 1024px) {
-    padding: 12px;
+    margin: 12px;
   }
 
   @media (max-width: 768px) {
-    padding: 0px;
+    margin: 0px;
   }
 
 }
