Update: Сделал главный экран домашней страницы

--- a/src/components/VideoBackground/VideoBackground.module.scss
+++ b/src/components/VideoBackground/VideoBackground.module.scss
@@ -1,7 +1,22 @@
 .videoBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100dvh;
   overflow: hidden;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.3;
+
+  }
 
   .player {
     object-fit: cover;
