--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,32 +1,13 @@
-.hero {
+.whiteBox {
   position: relative;
-  overflow: hidden;
-  height: 100dvh;
+  background-color: #fff;
+  border-radius: 100px 100px 0 0;
+  padding-top: 96px;
+  margin-top: -96px;
 
-  .heroWrapper {
-    position: relative;
-    display: flex;
-    align-items: center;
-    z-index: 1;
-    height: 100dvh;
-
-    .heroTitleBox {
-      display: flex;
-      flex-direction: column;
-      color: #fff;
-      text-transform: uppercase;
-
-      .heroSubTitle {
-        font-size: clamp(20px, 5.5vw, 40px);
-        margin-bottom: 35px;
-      }
-
-      .heroTitle {
-        font-size: clamp(25px, 5.5vw, 70px);
-      }
-
-    }
-
+  @media (max-width: 1680px) {
+    margin-top: -70px;
+    padding-top: 70px;
   }
 
 }
