--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,6 +63,7 @@ button::-moz-focus-inner {
 a,
 a:visited {
   text-decoration: none;
+  color: inherit;
 }
 
 a:hover {
@@ -88,6 +89,7 @@ h6 {
 }
 
 .page {
+  position: relative;
   margin: 16px;
   min-height: 100dvh;
   border-radius: 100px 100px 0 0;
@@ -101,6 +103,12 @@ h6 {
     margin: 0px;
   }
 
+}
+
+.container-small {
+  max-width: 1375px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .container {
