--- a/src/components/YearMessage/YearMessage.module.scss
+++ b/src/components/YearMessage/YearMessage.module.scss
@@ -1,1 +1,10 @@
-.yearMessage {}
+.yearMessage {
+
+.video {
+  max-width: 918px;
+  width: 100%;
+  aspect-ratio: 1.2 / 1;
+  max-height: 589px;
+}
+
+}
