--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,8 +1,8 @@
 .whiteBox {
   position: relative;
   background-color: #fff;
-  border-radius: 100px 100px 0 0;
-  padding-top: 96px;
+  border-radius: 100px;
+  padding: 96px 0 50px 0;
   margin-top: -96px;
 
   @media (max-width: 1680px) {
