--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,6 +9,27 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 768px) {
+      gap: 20px;
+    }
+
+  }
+
+  .logo {
+    @media (max-width: 1281px) {
+      width: 15%;
+      min-width: 12%;
+    }
+
+    @media (max-width: 1070px) {
+      width: fit-content;
+    }
+
+    @media (max-width: 768px) {
+      width: 65%;
+    }
+
   }
 
 }
