--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,4 +1,12 @@
 .link {
   display: block;
   width: fit-content;
+
+  .img {
+    @media (max-width: 1281px) {
+      width: 100% !important;
+    }
+  }
+
+
 }
