--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -5,6 +5,14 @@
   width: fit-content;
   padding: 9.5px 12px;
 
+  @media (max-width: 1281px) {
+    padding: 6px 9px;
+  }
+
+  @media (max-width: 1070px) {
+    display: none;
+  }
+
   .list {
     display: flex;
     align-items: center;
@@ -18,6 +26,11 @@
     padding: 12px 16px;
     color: #fff;
     transition: all .15s ease;
+
+    @media (max-width: 1281px) {
+      font-size: 14px;
+      padding: 9px 13px;
+    }
 
     &:hover {
       border-color: #fff;
