--- a/src/components/YouTubeLink/YouTubeLink.module.scss
+++ b/src/components/YouTubeLink/YouTubeLink.module.scss
@@ -6,6 +6,10 @@
   padding: 10px 16px;
   border-radius: 100px;
 
+  @media (max-width: 1281px) {
+    padding: 7px 13px;
+  }
+
   path {
     transition: all .15s ease;
   }
