--- a/src/sections/home/Hero/Hero.module.scss
+++ b/src/sections/home/Hero/Hero.module.scss
@@ -10,19 +10,32 @@
     z-index: 1;
     height: 100dvh;
 
+    @media (max-width: 1070px) {
+      justify-content: center;
+    }
+
     .heroTitleBox {
       display: flex;
       flex-direction: column;
       color: #fff;
       text-transform: uppercase;
 
+      @media (max-width: 1070px) {
+        align-items: center;
+      }
+
       .heroSubTitle {
         font-size: clamp(20px, 5.5vw, 40px);
         margin-bottom: 35px;
+
+        @media (max-width: 1070px) {
+          text-align: center;
+        }
+
       }
 
       .heroTitle {
-        font-size: clamp(25px, 5.5vw, 70px);
+        font-size: clamp(25px, 6vw, 70px);
       }
 
     }
