--- a/src/sections/home/Meetings/Meetings.module.scss
+++ b/src/sections/home/Meetings/Meetings.module.scss
@@ -1,5 +1,10 @@
 .section {
+  position: relative;
   padding-bottom: 150px;
+
+  @media (max-width: 768px) {
+    padding-top: 95px;
+  }
 
   .wrapper {
 
@@ -11,16 +16,25 @@
     .textContent {
       display: flex;
       justify-content: space-between;
+      gap: 40px;
       margin-bottom: 35px;
+
+      @media (max-width: 1070px) {
+        flex-direction: column;
+      }
 
       .textBox {
         display: flex;
         flex-direction: column;
         max-width: 672px;
-        width: 100%;
+        width: 50%;
+
+        @media (max-width: 1070px) {
+          width: 100%;
+        }
 
         .text {
-          font-size: clamp(16px, 2vw, 22px);
+          font-size: clamp(1rem, 0.925rem + 0.375vw, 1.375rem);
           color: #333333;
           line-height: 1.3;
 
@@ -32,9 +46,33 @@
 
       }
 
+      .titleBox {
+        width: 50%;
+
+        @media (max-width: 1070px) {
+          width: 100%;
+        }
+
+      }
+
       .title {
-        font-size: clamp(30px, 3.6vw, 50px);
+        // font-size: clamp(1.875rem, 1.225rem + 1vw, 3.125rem);
+        font-size: clamp(1.875rem, 1.925rem + 1vw, 3.125rem);
         line-height: 1.2;
+
+        @media (max-width: 1520px) {
+          font-size: clamp(1.875rem, 1.525rem + 1vw, 3.125rem);
+        }
+
+        @media (max-width: 1070px) {
+          font-size: clamp(1.875rem, 1.625rem + 1.8vw, 3.125rem);
+        }
+
+        @media (max-width: 768px) {
+          font-size: clamp(1.875rem, 1.5rem + 1.6vw, 3.125rem);
+        }
+
+
       }
 
     }
@@ -43,6 +81,16 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      gap: 40px;
+
+      .linkBox {
+        width: 50%;
+
+        @media (max-width: 1070px) {
+          width: fit-content;
+        }
+
+      }
 
       .link {
         display: flex;
@@ -78,7 +126,19 @@
 
       .socials {
         max-width: 672px;
-        width: 100%;
+        width: 50%;
+
+        @media (max-width: 1070px) {
+          width: fit-content;
+        }
+
+        @media (max-width: 768px) {
+          position: absolute;
+          top: 32px;
+          left: 50%;
+          transform: translateX(-50%);
+        }
+
       }
 
     }
