--- a/src/components/Event/Event.module.scss
+++ b/src/components/Event/Event.module.scss
@@ -8,12 +8,16 @@
   padding: 6%;
   background-color: #b0b0b0;
   z-index: 5;
-  margin-top: -260px;
+  margin-top: -20%;
   -webkit-box-shadow: 0px -20px 57px -43px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px -20px 57px -43px rgba(0, 0, 0, 0.75);
   box-shadow: 0px -20px 57px -43px rgba(0, 0, 0, 0.75);
   transition: transform .75s ease;
   // cursor: none;
+
+  @media (max-width: 1070px) {
+    // margin-top: -150px;
+  }
 
   &:first-child {
     margin-top: 0;
