--- a/src/sections/home/Info/Info.module.scss
+++ b/src/sections/home/Info/Info.module.scss
@@ -5,18 +5,61 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+
+    @media (max-width: 1070px) {
+      flex-direction: column;
+    }
+
+  }
+
+  .videos {
+    width: 65%;
+
+    @media (max-width: 1070px) {
+      width: 100% !important;
+    }
+
+    @media (max-width: 768px) {
+      margin-bottom: 59px;
+    }
+
   }
 
   .calendar {
     width: 30%;
+
+    @media (max-width: 1070px) {
+      width: 100%;
+    }
   }
 
   .containerSmall {
     padding-left: 5%;
 
+    @media (max-width: 1070px) {
+      padding-left: 20px;
+    }
+
+    @media (max-width: 768px) {
+      padding-left: 10px;
+    }
+
     .title {
-      font-size: clamp(30px, 3.5vw, 50px);
+      font-size: clamp(30px, 6vw, 50px);
       margin-bottom: 50px;
+
+      br {
+        display: none;
+
+        @media (max-width: 768px) {
+          display: block;
+        }
+      }
+
+      @media (max-width: 768px) {
+        margin-bottom: 25px;
+      }
+
     }
 
   }
