Update: Сделал фикс, чтобы цвет фона страницы был только у главной другой

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,6 +4,7 @@
   border-radius: 100px;
   padding: 96px 0 50px 0;
   margin-top: -96px;
+  z-index: 1;
 
   @media (max-width: 1680px) {
     margin-top: -70px;
