--- a/src/sections/home/Praying/Praying.module.scss
+++ b/src/sections/home/Praying/Praying.module.scss
@@ -1,6 +1,10 @@
 .section {
   padding-bottom: 150px;
 
+  @media (max-width: 1070px) {
+    padding-bottom: 120px;
+  }
+
   .wrapper {
     position: relative;
     background-color: #bebebe;
@@ -8,12 +12,24 @@
     border-radius: 30px;
     overflow: hidden;
 
+    @media (max-width: 1070px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    @media (max-width: 500px) {
+      aspect-ratio: 1 / 1.43;
+      padding: 40px;
+    }
+
     &::after {
       content: '';
       position: absolute;
       bottom: 0;
       right: 0;
-      width: 70%;
+      width: 100%;
       height: 150%;
       background-image: url('/img/png/praying-home-section.png');
       background-size: cover;
@@ -29,12 +45,17 @@
       top: 0;
       left: 0;
       z-index: 1;
-      background: rgb(10,10,10);
-      background: linear-gradient(90deg, rgba(10,10,10,1) 30%, rgba(28,28,28,0) 100%);
+      background: rgb(10, 10, 10);
+      background: linear-gradient(90deg, rgba(10, 10, 10, 1) 30%, rgba(28, 28, 28, 0) 100%);
+
+      @media (max-width: 1070px) {
+        background: rgba(10, 10, 10, 0.492);
+      }
+
     }
 
     .title {
-      font-size: clamp(22px, 3.2vw, 30px);
+      font-size: clamp(25px, 4vw, 30px);
       color: #fff;
       text-transform: uppercase;
       margin-bottom: 25px;
@@ -45,6 +66,21 @@
   .content {
     position: relative;
     z-index: 5;
+
+    @media (max-width: 500px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+    }
+
+  }
+
+  .btnBox {
+    width: fit-content;
+    @media (max-width: 500px) {
+      width: 100%;
+    }
   }
 
 }
