--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -68,6 +68,15 @@
     top: 60px;
     left: 0;
     width: 100%;
+
+    @media (max-width: 1070px) {
+      top: 50px;
+    }
+
+    @media (max-width: 768px) {
+      top: 30px;
+    }
+
   }
 
   .headerWrapper {
