--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -15,6 +15,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      padding: 7% 0;
     }
 
     &:last-child {
@@ -42,7 +43,9 @@
     }
 
     @media (max-width: 768px) {
-      margin-bottom: 26px;
+      justify-content: start;
+      width: 100%;
+      margin-bottom: 10px;
     }
 
   }
@@ -65,6 +68,7 @@
     font-weight: 300;
     line-height: 120%;
     color: #333;
+    text-transform: capitalize;
 
     &:nth-child(2) {
       color: #828282;
@@ -93,8 +97,8 @@
     -ms-flex-align: center;
     align-items: center;
 
-    @media (max-width: 1070px) {
-      // justify-content: space-between;
+    @media (max-width: 768px) {
+      align-items: flex-start;
     }
 
     &:nth-child(2) {
@@ -131,6 +135,12 @@
     line-height: 100%;
     letter-spacing: .5px;
     text-transform: uppercase;
+
+    @media (max-width: 768px) {
+      font-size: 16px;
+      padding: 8px 14px;
+    }
+
   }
 
 }
