--- a/src/components/Event/Event.module.scss
+++ b/src/components/Event/Event.module.scss
@@ -4,19 +4,33 @@
   overflow: hidden;
   border-radius: 80px;
   height: 100%;
-  aspect-ratio: 2.1 / 1;
+  aspect-ratio: 1.8 / 1;
   padding: 6%;
   background-color: #b0b0b0;
   z-index: 5;
-  margin-top: -20%;
+  margin-top: -30%;
   -webkit-box-shadow: 0px -20px 57px -43px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px -20px 57px -43px rgba(0, 0, 0, 0.75);
   box-shadow: 0px -20px 57px -43px rgba(0, 0, 0, 0.75);
   transition: transform .75s ease;
-  // cursor: none;
 
   @media (max-width: 1070px) {
-    // margin-top: -150px;
+    padding: 8%;
+    aspect-ratio: 1.6 / 1;
+    margin-top: -30%;
+  }
+
+  @media (max-width: 768px) {
+    margin-top: -40%;
+    padding: 8%;
+    border-radius: 30px;
+    aspect-ratio: 1.3 / 1;
+  }
+
+  @media (max-width: 450px) {
+    margin-top: -55%;
+    padding: 30px;
+    aspect-ratio: 1 / 1;
   }
 
   &:first-child {
@@ -42,13 +56,22 @@
     pointer-events: none;
   }
 
+  .link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+  }
+
   .wrapper {
     position: relative;
     z-index: 2;
 
     .title {
       color: #fff;
-      font-size: clamp(40px, 4vw, 80px);
+      font-size: clamp(25px, 4.8vw, 80px);
       text-transform: uppercase;
       line-height: 1;
       margin-bottom: 32px;
@@ -57,9 +80,13 @@
     .descriptionBox {
       max-width: 75%;
 
+      @media (max-width: 768px) {
+        max-width: unset;
+      }
+
       .description {
         color: #fff;
-        font-size: clamp(20px, 1.9vw, 22px);
+        font-size: clamp(16px, 1.9vw, 22px);
       }
 
     }
@@ -74,6 +101,13 @@
     height: 100%;
   }
 
-}
+  .tag {
+    color: #fff;
+    border: 1px solid white;
+    border-radius: 100px;
+    padding: 10px 16px;
+    width: fit-content;
+    margin-bottom: 30px;
+  }
 
-.up {}
+}
