--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,13 +1,32 @@
 .footer {
   padding: 160px 0;
   color: #fff;
+  background-color: #191919;
+
+  @media (max-width: 768px) {
+    padding: 100px 0;
+  }
 
   .wrapper {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    gap: 35px;
+
+    @media (max-width: 768px) {
+      flex-direction: column-reverse;
+      gap: 40px;
+    }
 
     .meta {
+
+      @media (max-width: 768px) {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
 
       .logo {
         margin-bottom: 48px;
@@ -36,10 +55,26 @@
       justify-content: space-between;
       width: 65%;
 
+      @media (max-width: 768px) {
+        width: 100%;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        gap: 50px;
+      }
+
+      @media (max-width: 430px) {
+        display: grid;
+        grid-template-columns: repeat(2, .2fr);
+        grid-template-rows: repeat(2, .2fr);
+        gap: 10px;
+      }
+
       .linkList {
         display: flex;
         flex-direction: column;
         gap: 16px;
+        margin-bottom: 25px;
 
         .link {
           font-size: 16px;
@@ -53,6 +88,11 @@
         .linkListTitle {
           text-transform: uppercase;
           margin-bottom: 32px;
+
+          @media (max-width: 430px) {
+            margin-bottom: 10px;
+          }
+
         }
 
       }
