--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,13 +31,15 @@ aside {
 
 html,
 body {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
   font-size: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  background-color: #191919;
   overflow-x: hidden;
 }
 
@@ -89,21 +91,20 @@ h6 {
 }
 
 .page {
+  position: relative;
   display: flex;
   flex-direction: column;
-  position: relative;
-  margin: 16px;
+  padding: 16px;
   min-height: 100dvh;
-  border-radius: 100px 100px 0 0;
   overflow: hidden;
 
   @media (max-width: 1070px) {
-    margin: 12px;
+    padding: 12px;
     border-radius: 80px 80px 0 0;
   }
 
   @media (max-width: 768px) {
-    margin: 0px;
+    padding: 0px;
     border-radius: 0;
   }
 
@@ -126,6 +127,10 @@ main {
 
 .container {
   max-width: 1443px;
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
+}
+
+.home-page {
+  background-color: #191919;
 }
