--- a/src/components/DontaionButton/DonationButton.module.scss
+++ b/src/components/DontaionButton/DonationButton.module.scss
@@ -23,3 +23,15 @@
   }
 
 }
+
+.black {
+  border: 2px solid #000;
+  color: #000;
+
+  &:hover {
+    color: #fff;
+    border-color: transparent;
+    background-color: #FFAC00;
+  }
+
+}
