--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -41,6 +41,7 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   overflow-x: hidden;
+  background-color: #191919;
 }
 
 input,
@@ -96,16 +97,13 @@ h6 {
   flex-direction: column;
   padding: 16px;
   min-height: 100dvh;
-  overflow: hidden;
 
   @media (max-width: 1070px) {
     padding: 12px;
-    border-radius: 80px 80px 0 0;
   }
 
   @media (max-width: 768px) {
     padding: 0px;
-    border-radius: 0;
   }
 
 }
@@ -131,6 +129,20 @@ main {
   margin: 0 auto;
 }
 
-.home-page {
-  background-color: #191919;
+.children-page {
+
+  border-radius: 100px;
+
+  @media (max-width: 1070px) {
+    border-radius: 80px;
+  }
+
+  @media (max-width: 768px) {
+    border-radius: 0;
+  }
+
+}
+
+.about {
+  background-color: #fff;
 }
