--- a/src/sections/about/Hero/Hero.module.scss
+++ b/src/sections/about/Hero/Hero.module.scss
@@ -1,6 +1,14 @@
 .section {
   margin-bottom: 150px;
 
+  @media (max-width: 1070px) {
+    margin-bottom: 120px;
+  }
+
+  @media (max-width: 768px) {
+    margin-bottom: 80px;
+  }
+
   .wrapper {
 
     .heading {
@@ -9,6 +17,10 @@
       align-items: center;
       padding-top: 16%;
       margin-bottom: 100px;
+
+      @media (max-width: 768px) {
+        padding-top: 150px;
+      }
 
       .subtitleBox {
         .subtitle {
@@ -38,6 +50,10 @@
           max-width: 70%;
           margin: 0 auto;
           line-height: 1.5;
+
+          @media (max-width: 768px) {
+            max-width: unset;
+          }
         }
       }
 
@@ -46,6 +62,51 @@
     .blocks {
       border-radius: 50px;
       overflow: hidden;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(5, 1fr);
+      grid-column-gap: 20px;
+      grid-row-gap: 20px;
+      max-height: 760px;
+
+      @media (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        max-height: unset;
+        border-radius: 0;
+      }
+
+    }
+
+    .blockItem {
+
+      @media (max-width: 768px) {
+        aspect-ratio: 1 / 1.2;
+        border-radius: 25px;
+        overflow: hidden;
+      }
+
+      .blockImg {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      &:nth-child(1) {
+        grid-area: 1 / 1 / 4 / 3;
+      }
+
+      &:nth-child(2) {
+        grid-area: 4 / 1 / 6 / 3;
+      }
+
+      &:nth-child(3) {
+        grid-area: 1 / 3 / 3 / 5;
+      }
+
+      &:nth-child(4) {
+        grid-area: 3 / 3 / 6 / 5;
+      }
 
     }
 
