--- a/src/sections/home/Hero/Hero.module.scss
+++ b/src/sections/home/Hero/Hero.module.scss
@@ -4,8 +4,12 @@
   height: 100dvh;
   border-radius: 100px 100px 0 0;
 
+  @media (max-width: 1400px) {
+    border-radius: 50px 50px 0 0;
+  }
+
   @media (max-width: 1070px) {
-    border-radius: 80px 80px 0 0;
+    border-radius: 30px 30px 0 0;
   }
 
   @media (max-width: 768px) {
