--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -133,7 +133,7 @@ main {
 
   border-radius: 100px;
 
-  @media (max-width: 1400px) {
+  @media (max-width: 1600px) {
     border-radius: 50px 50px 0 0;
   }
 
@@ -147,6 +147,7 @@ main {
 
 }
 
-.about {
+.about,
+.contacts {
   background-color: #fff;
 }
