--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -37,6 +37,7 @@
     padding: 12px 16px;
     color: #fff;
     transition: all .15s ease;
+    background-color: transparent;
 
     @media (max-width: 1281px) {
       font-size: 14px;
@@ -55,9 +56,8 @@
   position: absolute;
   width: 100%;
   left: 0;
-  bottom: 0;
+  bottom: -70px;
   z-index: 1;
-  padding-top: 50px;
 }
 
 .submenu {
