--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -40,6 +40,7 @@
 
         .infoText {
           font-size: clamp(1.25rem, 1.1875rem + 0.3125vw, 1.5625rem);
+          color: #fff;
         }
 
       }
@@ -78,6 +79,7 @@
 
         .link {
           font-size: 16px;
+          color: #fff;
 
           &:hover {
             text-decoration: underline;
