--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -27,45 +27,78 @@
 
   }
 
-  .link {
-    position: static;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    border-radius: 50px;
-    border: 1px solid transparent;
-    padding: 12px 16px;
-    color: #fff;
-    transition: all .15s ease;
-    background-color: transparent;
+}
+
+.link {
+  position: static;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  gap: 8px;
+  border-radius: 50px;
+  border: 1px solid transparent;
+  padding: 12px 16px;
+  color: #fff;
+  transition: all .15s ease;
+  background-color: transparent;
+
+  @media (max-width: 1281px) {
+    font-size: 14px;
+    padding: 9px 13px;
+  }
+
+  &:hover {
+    border-color: #fff;
+  }
+
+}
+
+.linkLayout {
+  position: relative;
+
+  .layout {
+    position: absolute;
+    width: fit-content;
+    left: 0;
+    top: 52px;
+    z-index: 1;
 
     @media (max-width: 1281px) {
-      font-size: 14px;
-      padding: 9px 13px;
+      top: 42px;
     }
 
-    &:hover {
-      border-color: #fff;
+  }
+
+  .submenu {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    width: fit-content;
+    padding: 10px;
+    // padding-top: 80px;
+    border-radius: 10px;
+    gap: 5px;
+
+    .submenuLink {
+      padding: 10px;
+      border-radius: 5px;
+      transition: all .1s ease;
+      color: #191919;
+
+      &:hover {
+        background-color: #eaeaea;
+      }
+
     }
 
   }
 
 }
 
-.layout {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  bottom: -70px;
-  z-index: 1;
+.icon {
+  transition: all .15s ease;
 }
 
-.submenu {
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  width: 100%;
-  padding: 25px;
-  // padding-top: 80px;
-  border-radius: 0px 0px 25px 25px;
+.rotate {
+  transform: rotate(-180deg);
 }
