--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -42,6 +42,7 @@ body {
   -webkit-text-size-adjust: 100%;
   overflow-x: hidden;
   background-color: #191919;
+  scroll-behavior: smooth;
 }
 
 input,
@@ -147,6 +148,7 @@ main {
 }
 
 .about,
-.contacts {
+.contacts,
+.valuation {
   background-color: #fff;
 }
