u-3: Начал делать страницу История Церкви

--- a/src/sections/about/valuation/Hero/Hero.module.scss
+++ b/src/sections/about/valuation/Hero/Hero.module.scss
@@ -8,6 +8,10 @@
   .wrapper {
     margin-top: 210px;
 
+    @media (max-width: 768px) {
+      margin-top: 150px;
+    }
+
     .content {
       display: flex;
       flex-direction: column;
