--- a/src/sections/about/team/Hero/Hero.module.scss
+++ b/src/sections/about/team/Hero/Hero.module.scss
@@ -15,7 +15,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding-top: 16%;
+      padding-top: 210px;
       margin-bottom: 100px;
 
       @media (max-width: 768px) {
