--- a/src/components/DontaionButton/DonationButton.module.scss
+++ b/src/components/DontaionButton/DonationButton.module.scss
@@ -24,6 +24,19 @@
 
 }
 
+.accent {
+  background-color: #FFAC00;
+  border-color: transparent;
+  color: #000;
+
+  &:hover {
+    background-color: transparent;
+    border-color: #fff;
+    color: #fff;
+  }
+
+}
+
 .black {
   border: 2px solid #000;
   color: #000;
