--- a/src/components/Event/Event.module.scss
+++ b/src/components/Event/Event.module.scss
@@ -75,6 +75,7 @@
       text-transform: uppercase;
       line-height: 1;
       margin-bottom: 32px;
+      max-width: 70%;
     }
 
     .descriptionBox {
