--- a/src/components/LastSpeeches/LastSpeeches.module.scss
+++ b/src/components/LastSpeeches/LastSpeeches.module.scss
@@ -13,7 +13,7 @@
   }
 
   .titleBox {
-    padding-left: 7%;
+    // padding-left: 7%;
     margin-bottom: 20px;
     width: fit-content;
     pointer-events: none;
