--- a/src/components/Socials/Socials.module.scss
+++ b/src/components/Socials/Socials.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     gap: 16px;
+    width: fit-content;
 
     @media (max-width: 500px) {
       gap: 15px !important;
