--- a/src/sections/home/Meetings/Meetings.module.scss
+++ b/src/sections/home/Meetings/Meetings.module.scss
@@ -42,6 +42,7 @@
           font-size: clamp(1rem, 0.925rem + 0.375vw, 1.375rem);
           color: #333333;
           line-height: 1.3;
+          font-weight: 500;
 
           &:first-child {
             margin-bottom: 5px;
