--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,13 +1,17 @@
 .link {
   display: block;
   width: fit-content;
-  margin-top: -12px;
 
   .img {
     @media (max-width: 1281px) {
       width: 100% !important;
       height: auto;
     }
+
+    @media (max-width: 768px) {
+      width: 75% !important;
+    }
+
   }
 
 
