--- a/src/components/SpeakerSwiper/SpeakerSwiper.module.scss
+++ b/src/components/SpeakerSwiper/SpeakerSwiper.module.scss
@@ -4,6 +4,15 @@
   border-radius: 50px;
   margin-bottom: 30px;
   overflow: hidden;
+
+  @media (max-width: 1070px) {
+    border-radius: 30px;
+  }
+
+  @media (max-width: 768px) {
+    border-radius: 25px;
+  }
+
 }
 
 .text {
@@ -15,5 +24,5 @@
 
 .description {
   margin-bottom: 10px;
-  font-size: 16px;
+  font-size: clamp(14px, 1.5vw, 18px);
 }
