--- a/src/sections/event/Speakers/Speakers.module.scss
+++ b/src/sections/event/Speakers/Speakers.module.scss
@@ -2,6 +2,15 @@
   font-size: clamp(30px, 3.2vw, 60px);
   line-height: 1.2;
   margin-bottom: 50px;
+
+  @media (max-width: 1070px) {
+    margin-bottom: 30px;
+  }
+
+  @media (max-width: 768px) {
+    margin-bottom: 25px;
+  }
+
 }
 
 .section {
