--- a/src/sections/home/Hero/Hero.module.scss
+++ b/src/sections/home/Hero/Hero.module.scss
@@ -43,12 +43,18 @@
 
         @media (max-width: 1070px) {
           text-align: center;
+          margin-bottom: 15px;
         }
 
       }
 
       .heroTitle {
-        font-size: clamp(25px, 6vw, 70px);
+        font-size: clamp(34px, 6vw, 70px);
+
+        @media (max-width: 1070px) {
+          text-align: center;
+        }
+
       }
 
     }
