--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -2,7 +2,14 @@
   display: block;
   width: fit-content;
 
+  &:hover {
+    .img {
+      scale: 1.02;
+    }
+  }
+
   .img {
+    transition: all .15s ease;
     @media (max-width: 1281px) {
       width: 100% !important;
       height: auto;
