--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -58,7 +58,7 @@
       display: flex;
       justify-content: space-between;
       gap: 30px;
-      width: 60%;
+      width: 55%;
 
       @media (max-width: 768px) {
         width: 100%;
@@ -131,11 +131,17 @@
     display: flex;
     gap: 50px;
     justify-content: space-between;
-    width: 100%;
+    width: 60%;
+
+    @media (max-width: 1070px) {
+      width: 100%;
+    }
+
   }
 
   .logoWrapper {
     margin-bottom: 30px;
+    margin-top: -20px;
   }
 
 }
