--- a/src/sections/home/Hero/Hero.module.scss
+++ b/src/sections/home/Hero/Hero.module.scss
@@ -38,14 +38,21 @@
       }
 
       .heroSubTitle {
+        display: block;
         font-size: clamp(20px, 5.2vw, 40px);
-        margin-bottom: 35px;
+        margin-bottom: 25px;
 
         @media (max-width: 1070px) {
           text-align: center;
           margin-bottom: 15px;
         }
 
+      }
+
+      .heroTitleBox {
+        @media (max-width: 1070px) {
+          text-align: center;
+        }
       }
 
       .heroTitle {
