--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -14,6 +14,10 @@
   .mobileFooter {
     display: none;
 
+    .logo {
+      margin-bottom: 25px;
+    }
+
     @media (max-width: 768px) {
       display: block;
     }
