--- a/src/components/TextRow/TextRow.module.scss
+++ b/src/components/TextRow/TextRow.module.scss
@@ -16,7 +16,7 @@
     width: 10rem;
 
     @media (max-width: 768px) {
-      width: 5rem;
+      width: 3.5rem;
     }
 
   }
@@ -28,7 +28,7 @@
 
     @media (max-width: 768px) {
       width: 100%;
-      max-width: 90%;
+      max-width: unset;
     }
 
   }
@@ -49,7 +49,7 @@
     line-height: 1.3;
 
     @media (max-width: 768px) {
-      max-width: 90%;
+      max-width: 100%;
     }
 
   }
