--- a/src/components/Event/Event.module.scss
+++ b/src/components/Event/Event.module.scss
@@ -52,7 +52,7 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    opacity: 0.3;
+    opacity: 0.35;
     pointer-events: none;
   }
 
@@ -71,11 +71,16 @@
 
     .title {
       color: #fff;
-      font-size: clamp(25px, 4.8vw, 80px);
+      font-size: clamp(28px, 4.8vw, 80px);
       text-transform: uppercase;
       line-height: 1;
       margin-bottom: 32px;
       max-width: 70%;
+
+      @media (max-width: 768px) {
+        margin-bottom: 16px;
+      }
+
     }
 
     .descriptionBox {
