--- a/src/sections/event/Hero/Hero.module.scss
+++ b/src/sections/event/Hero/Hero.module.scss
@@ -1,7 +1,21 @@
 .section {
+  position: relative;
   margin-bottom: 150px;
-  background-color: #D9D9D9;
+  background-color: black;
   border-radius: 100px;
+  overflow: hidden;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.4;
+    z-index: 3;
+  }
 
   @media (max-width: 1600px) {
     border-radius: 50px 50px 0 0;
@@ -18,12 +32,15 @@
   }
 
   .wrapper {
+    position: relative;
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: end;
     padding-bottom: 16rem;
     max-width: 50%;
+    color: #fff;
+    z-index: 5;
 
     @media (max-width: 1070px) {
       padding-bottom: 0;
@@ -55,6 +72,10 @@
 
     }
 
+  }
+
+  .background {
+    z-index: 2;
   }
 
 }
