--- a/src/sections/home/Info/Info.module.scss
+++ b/src/sections/home/Info/Info.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    height: 100%;
 
     @media (max-width: 1070px) {
       flex-direction: column;
@@ -17,7 +18,9 @@
   }
 
   .videos {
+    position: sticky;
     width: 65%;
+    top: 10px;
 
     @media (max-width: 1070px) {
       width: 100% !important;
