--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -73,8 +73,8 @@ a:hover {
   text-decoration: none;
 }
 
-ul li {
-  list-style: none;
+ul, ol {
+  margin-left: 20px;
 }
 
 img {
@@ -125,7 +125,7 @@ main {
 
 .container {
   max-width: 1443px;
-  width: 95%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -154,3 +154,4 @@ main {
 .event {
   background-color: #fff;
 }
+
