--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -1,1 +1,71 @@
-.forms {}
+.formTitle {
+  font-size: clamp(22px, 3.2vw, 40px);
+  margin-bottom: 42px;
+}
+
+.form {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+
+  .label {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .checkboxLabel {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    margin-bottom: 32px;
+  }
+
+  .input {
+    border: 1px solid #B1B1B1;
+    border-radius: 100px;
+    padding: 9px 20px;
+    margin-bottom: 16px;
+    font-size: 18px;
+  }
+
+  .error {
+    margin: -10px 0 10px 10px;
+    font-size: 14px;
+    color: rgb(236, 20, 20);
+  }
+
+}
+
+.submitBtn {
+  width: 100%;
+  background-color: #191919;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 100px;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 20px 30px;
+  transition: all .15s ease;
+
+  &:hover {
+    background-color: #FFAC00;
+    color: #fff;
+  }
+
+}
+
+.btn {
+  text-transform: uppercase;
+  font-size: 18px;
+  border-radius: 100px;
+  padding: 0 30px;
+  height: 60px;
+  transition: all .15s ease;
+
+  &:hover {
+    background-color: #FFAC00;
+    color: #fff;
+  }
+
+}
