--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,6 +1,31 @@
 .modal {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100dvh;
-  background-color: #00000034;
+  background-color: #000000b7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+
+  .wrapper {
+    position: relative;
+    background-color: #fff;
+    border-radius: 50px;
+    padding: 2.7% 4.5%;
+    max-width: 645px;
+    width: 100%;
+    z-index: 99;
+
+    .close {
+      position: absolute;
+      top: 35px;
+      right: 35px;
+      background-color: transparent;
+    }
+
+  }
+
 }
