--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -3,22 +3,30 @@
   margin-bottom: 42px;
 }
 
-.form {
+.standartForm {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+
+  .agreementChecbox {
+    margin-top: 3px;
+    width: 30px;
+    height: 30px;
+  }
 
   .label {
     display: flex;
     flex-direction: column;
     width: 100%;
   }
-
+  
   .checkboxLabel {
     width: 100%;
     display: flex;
+    align-items: start;
     gap: 10px;
     margin-bottom: 32px;
+    cursor: pointer;
   }
 
   .input {
@@ -35,6 +43,11 @@
     color: rgb(236, 20, 20);
   }
 
+}
+
+.price {
+  font-size: 22px;
+  margin-bottom: 42px;
 }
 
 .submitBtn {
