--- a/src/sections/home/Info/Info.module.scss
+++ b/src/sections/home/Info/Info.module.scss
@@ -24,6 +24,7 @@
 
     @media (max-width: 1070px) {
       width: 100% !important;
+      position: static;
     }
 
     @media (max-width: 768px) {
