--- a/src/components/DonationBanner/DonationBanner.module.scss
+++ b/src/components/DonationBanner/DonationBanner.module.scss
@@ -6,6 +6,7 @@
   }
 
   .wrapper {
+    position: relative;
     background-color: #D9D9D9;
     padding: 60px;
     border-radius: 30px;
@@ -13,6 +14,32 @@
     justify-content: space-between;
     aspect-ratio: 3.5 / 1;
     max-height: 433px;
+    overflow: hidden;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000000;
+      opacity: 0.5;
+    }
+
+    .img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .info,
+    .title {
+      z-index: 4;
+    }
 
     .info {
       display: flex;
