--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -9,7 +9,6 @@
   flex-direction: column;
 
   .agreementChecbox {
-    margin-top: 3px;
     width: 30px;
     height: 30px;
   }
@@ -19,14 +18,19 @@
     flex-direction: column;
     width: 100%;
   }
-  
+
   .checkboxLabel {
     width: 100%;
     display: flex;
-    align-items: start;
+    align-items: center;
     gap: 10px;
     margin-bottom: 32px;
     cursor: pointer;
+
+    input[type="checkbox"] {
+      cursor: pointer;
+    }
+
   }
 
   .input {
@@ -64,6 +68,17 @@
   &:hover {
     background-color: #FFAC00;
     color: #fff;
+  }
+
+  &:disabled {
+    opacity: 0.7 !important;
+    cursor: not-allowed;
+
+    &:hover {
+      background-color: #191919;
+      color: #fff;
+    }
+
   }
 
 }
