--- a/src/components/ContactsForm/ContactsForm.module.scss
+++ b/src/components/ContactsForm/ContactsForm.module.scss
@@ -2,9 +2,12 @@
   background-color: #fff;
   border-radius: 50px;
   padding: 50px 60px;
+  max-width: 596px;
+  width: 100%;
 
   @media (max-width: 1070px) {
     padding: 35px 45px;
+    max-width: unset;
   }
 
   @media (max-width: 768px) {
@@ -15,18 +18,6 @@
   .optionsBox {
     position: relative;
     top: -10px;
-
-    .variants {
-      position: absolute;
-      padding: 20px;
-      background-color: #fff;
-      width: 100%;
-      -webkit-box-shadow: 0px 14px 58px -10px rgba(0, 0, 0, 0.41);
-      -moz-box-shadow: 0px 14px 58px -10px rgba(0, 0, 0, 0.41);
-      box-shadow: 0px 14px 58px -10px rgba(0, 0, 0, 0.41);
-      border-radius: 20px;
-    }
-
   }
 
   .list {
@@ -82,40 +73,6 @@
 
     }
 
-    .select {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 10px;
-      padding: 6px 6px 6px 20px !important;
-      cursor: pointer;
-
-      .selectTitle {
-        font-size: 22px;
-
-        @media (max-width: 768px) {
-          font-size: 16px;
-        }
-
-      }
-
-      .icon {
-        background-color: #191919;
-        border-radius: 100px;
-        min-width: 40px;
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        .iconImg {
-          transform: rotate(90deg);
-        }
-
-      }
-
-    }
-
     .input {
       margin-bottom: 16px;
 
@@ -161,6 +118,27 @@
 
   }
 
+}
+
+.variants {
+  position: absolute;
+  padding: 20px;
+  background-color: #fff;
+  width: 100%;
+  -webkit-box-shadow: 0px 14px 58px -10px rgba(0, 0, 0, 0.41);
+  -moz-box-shadow: 0px 14px 58px -10px rgba(0, 0, 0, 0.41);
+  box-shadow: 0px 14px 58px -10px rgba(0, 0, 0, 0.41);
+  border-radius: 20px;
+}
+
+.sended {
+  width: 60%;
+  max-width: unset !important;
+
+  .title {
+    color: rgb(62, 191, 62);
+    font-size: clamp(40px, 4vw, 60px);
+  }
 }
 
 .active {
