--- a/src/sections/contacts/Hero/Hero.module.scss
+++ b/src/sections/contacts/Hero/Hero.module.scss
@@ -24,6 +24,7 @@
     align-items: flex-start;
     justify-content: space-between;
     padding-bottom: 50px;
+    gap: 70px;
 
     @media (max-width: 1070px) {
       flex-direction: column;
@@ -64,16 +65,6 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-      }
-
-    }
-
-    .form {
-      max-width: 596px;
-      width: 100%;
-
-      @media (max-width: 1070px) {
-        max-width: unset;
       }
 
     }
