--- a/src/sections/about/valuation/Hero/Hero.module.scss
+++ b/src/sections/about/valuation/Hero/Hero.module.scss
@@ -40,6 +40,7 @@
         max-width: 80%;
         line-height: 1.3;
         font-size: clamp(18px, 4vw, 22px);
+        margin: 0 auto;
       }
 
     }
