--- a/src/app/thanks/page.module.scss
+++ b/src/app/thanks/page.module.scss
@@ -5,6 +5,10 @@
   justify-content: center;
   flex-direction: column;
 
+  @media (max-width: 786px) {
+    height: 80dvh;
+  }
+
   .title {
     font-size: clamp(25px, 2.8vw, 45px);
     text-align: center;
@@ -39,8 +43,15 @@
   }
 
   .linkBox {
+
+    @media (max-width: 786px) {
+      width: 100%;
+      display: flex;
+    }
+
     .link {
       border: 2px solid transparent;
+      text-align: center;
       width: 100%;
       background-color: #ffac00;
       border-radius: 100px;
@@ -59,6 +70,15 @@
     }
   }
 
+  .imgBox {
+    position: relative;
 
+    .image {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+
+  }
 
 }
