--- a/src/components/DontaionButton/DonationButton.module.scss
+++ b/src/components/DontaionButton/DonationButton.module.scss
@@ -15,13 +15,14 @@
 
   &:hover {
     border-color: transparent;
-    background-color: #FFAC00;
+    background-color: #FFAD01;
+    color: #191919;
   }
 
 }
 
 .accent {
-  background-color: #FFAC00;
+  background-color: #FFAD01;
   border-color: transparent;
   color: #000;
 
