--- a/src/components/PrayingButton/PrayingButton.module.scss
+++ b/src/components/PrayingButton/PrayingButton.module.scss
@@ -13,8 +13,8 @@
 
   &:hover {
     border-color: transparent;
-    background-color: #FFAC00;
-    color: #fff;
+    background-color: #FFAD01;
+    color: #191919;
   }
 
 }
