--- a/src/sections/home/Meetings/Meetings.module.scss
+++ b/src/sections/home/Meetings/Meetings.module.scss
@@ -102,6 +102,7 @@
         display: flex;
         align-items: center;
         gap: 24px;
+        color: #000;
 
         &:hover {
           .linkImg {
