--- a/src/components/DonationBanner/DonationBanner.module.scss
+++ b/src/components/DonationBanner/DonationBanner.module.scss
@@ -18,28 +18,38 @@
 
     @media (max-width: 1070px) {
       padding: 30px;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
       max-height: unset;
       aspect-ratio: 2.5 / 1;
     }
 
     @media (max-width: 786px) {
-      aspect-ratio: 0.8 / 1;
-      max-height: 420px;
+      flex-direction: column;
+      align-items: flex-start;
+      aspect-ratio: 1.6 / 1;
+      min-height: 390px;
       width: 100%;
     }
 
-    &::after {
-      content: '';
+    @media (max-width: 425px) {
+      aspect-ratio: 0.6 / 1;
+      justify-content: end;
+      gap: 35px;
+    }
+
+    .picture {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #000000;
-      opacity: 0.5;
+      object-fit: cover;
+
+      @media (max-width: 769px) {
+        object-fit: contain;
+        top: unset;
+        bottom: 0;
+      }
+
     }
 
     .img {
@@ -47,7 +57,6 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
       object-fit: cover;
     }
 
@@ -60,27 +69,31 @@
       display: flex;
       align-items: end;
 
-      .infoBox {
-        gap: 30px;
-        @media (max-width: 1070px) {
-          flex-direction: column;
-          gap: 10px;
-        }
+      @media (max-width: 768px) {
+        width: 100%;
       }
 
-      .btn {
-        text-transform: uppercase;
-        font-size: 18px;
-        border-radius: 100px;
-        padding: 0 30px;
-        height: 60px;
-        transition: all .15s ease;
+      .infoBox {
+        gap: 30px;
+        align-items: center;
+        position: absolute;
+        bottom: 30px;
+        right: 30px;
 
-        &:hover {
-          background-color: #FFAC00;
-          color: #fff;
+        @media (max-width: 1070px) {
+          gap: 10px;
         }
 
+        @media (max-width: 768px) {
+          position: static;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 25px;
+        }
+
+        @media (max-width: 425px) {
+          width: 100%;
+        }
       }
 
       .infoBox,
@@ -96,7 +109,7 @@
           font-size: clamp(30px, 4.5vw, 60px);
 
           @media (max-width: 1070px) {
-            font-size: 50px;
+            font-size: 40px;
           }
 
         }
@@ -106,7 +119,7 @@
     }
 
     .title {
-      font-size: clamp(30px, 3.5vw, 50px);
+      font-size: clamp(30px, 4.8vw, 50px);
       color: #fff;
     }
 
