--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -90,6 +90,10 @@
   padding: 0 30px;
   height: 60px;
   transition: all .15s ease;
+  
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 
   &:hover {
     background-color: #FFAC00;
