--- a/src/sections/about/history/About/About.module.scss
+++ b/src/sections/about/history/About/About.module.scss
@@ -9,7 +9,7 @@
     margin-bottom: 80px;
 
     .title {
-      font-size: clamp(30px, 4vw, 50px);
+      font-size: clamp(30px, 5.2vw, 50px);
       margin-bottom: 20px;
     }
 
@@ -17,6 +17,11 @@
       max-width: 55%;
       font-size: clamp(18px, 1.2vw, 22px);
       line-height: 1.3;
+
+      @media (max-width: 1070px) {
+        max-width: unset;
+      }
+
     }
 
   }
