--- a/src/sections/about/team/Hero/Hero.module.scss
+++ b/src/sections/about/team/Hero/Hero.module.scss
@@ -36,7 +36,8 @@
 
         .title {
           text-align: center;
-          font-size: clamp(2.5rem, 2.325rem + 1.875vw, 4.375rem);
+          font-size: clamp(30px, 7vw, 70px);
+          // font-size:40px;
           text-transform: uppercase;
           line-height: 1.2;
         }
@@ -51,8 +52,13 @@
           margin: 0 auto;
           line-height: 1.5;
 
+          @media (max-width: 1070px) {
+            font-size: 18px;
+          }
+
           @media (max-width: 768px) {
             max-width: unset;
+            font-size: 16px;
           }
         }
       }
