--- a/src/sections/about/valuation/Hero/Hero.module.scss
+++ b/src/sections/about/valuation/Hero/Hero.module.scss
@@ -23,13 +23,14 @@
       }
 
       .breadcrumbs {
+        display: block;
         text-transform: uppercase;
         font-size: 16px;
-        margin-bottom: 45px;
+        margin-bottom: 47px;
       }
 
       .title {
-        font-size: clamp(35px, 5vw, 70px);
+        font-size: clamp(30px, 7vw, 70px);
         text-transform: uppercase;
         text-align: center;
         margin-bottom: 50px;
@@ -39,8 +40,18 @@
         text-align: center;
         max-width: 80%;
         line-height: 1.3;
-        font-size: clamp(18px, 4vw, 22px);
+        font-size: clamp(16px, 4vw, 22px);
         margin: 0 auto;
+
+        @media (max-width: 1070px) {
+          font-size: 18px;
+        }
+
+        @media (max-width: 768px) {
+          max-width: unset;
+          font-size: 16px;
+        }
+
       }
 
     }
