--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -73,7 +73,8 @@ a:hover {
   text-decoration: none;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
 }
 
@@ -125,7 +126,7 @@ main {
 
 .container {
   max-width: 1443px;
-  width: 90%;
+  width: 92%;
   margin: 0 auto;
 }
 
@@ -147,13 +148,23 @@ main {
 
 }
 
-.about,
+.team,
+.docs {
+  @media (max-width: 1600px) {
+    border-radius: 50px;
+  }
+  @media (max-width: 768px) {
+    border-radius: 0 0 15px 15px;
+  }
+}
+
+.team,
 .contacts,
 .valuation,
 .foundation,
 .event,
 .thanks,
-.donation {
+.donation,
+.docs {
   background-color: #fff;
 }
-
