--- a/src/components/DonationBanner/DonationBanner.module.scss
+++ b/src/components/DonationBanner/DonationBanner.module.scss
@@ -67,7 +67,7 @@
 
     .info {
       display: flex;
-      align-items: end;
+      align-items: flex-end;
 
       @media (max-width: 768px) {
         width: 100%;
