--- a/src/sections/event/Hero/Hero.module.scss
+++ b/src/sections/event/Hero/Hero.module.scss
@@ -36,7 +36,7 @@
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     padding-bottom: 16rem;
     max-width: 50%;
     color: #fff;
