--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -150,7 +150,7 @@
     gap: 30px;
 
     .link {
-      font-size: clamp(20px, 6vw, 30px);
+      font-size: 20px;
       color: #fff;
       background-color: transparent;
       display: flex;
@@ -184,7 +184,8 @@
 
 .submenuLink {
   color: #fff !important;
-  font-size: 20px;
+  font-size: 16px;
+  padding: 10px 10px;
 }
 
 .open {
