--- a/src/sections/contacts/Hero/Hero.module.scss
+++ b/src/sections/contacts/Hero/Hero.module.scss
@@ -72,6 +72,15 @@
 
     .formBox {
       width: 40%;
+
+      @media (max-width: 1070px) {
+        width: 80%;
+      }
+
+      @media (max-width: 768px) {
+        width: 100%;
+      }
+
     }
 
 
