--- a/src/components/YearMessage/YearMessage.module.scss
+++ b/src/components/YearMessage/YearMessage.module.scss
@@ -6,6 +6,9 @@
     width: 100%;
     aspect-ratio: 1.72 / 1;
     max-height: 589px;
+    border-radius: 30px;
+    overflow: hidden;
+    max-height: 511px;
   }
 
 }
