--- a/src/sections/home/Info/Info.module.scss
+++ b/src/sections/home/Info/Info.module.scss
@@ -20,7 +20,7 @@
   .videos {
     position: sticky;
     width: 65%;
-    top: 10px;
+    top: 5%;
 
     @media (max-width: 1070px) {
       width: 100% !important;
