--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -1,6 +1,11 @@
 .formTitle {
-  font-size: clamp(22px, 3.2vw, 40px);
+  font-size: clamp(30px, 3.2vw, 40px);
   margin-bottom: 42px;
+
+  @media (max-width: 768px) {
+    margin-bottom: 22px;
+  }
+
 }
 
 .standartForm {
@@ -11,6 +16,13 @@
   .agreementChecbox {
     width: 30px;
     height: 30px;
+
+  }
+
+  .checkboxTitle {
+    @media (max-width: 768px) {
+      font-size: 14px;
+    }
   }
 
   .label {
@@ -31,6 +43,10 @@
       cursor: pointer;
     }
 
+    @media (max-width: 768px) {
+      margin-bottom: 16px;
+    }
+
   }
 
   .input {
@@ -39,6 +55,12 @@
     padding: 9px 20px;
     margin-bottom: 16px;
     font-size: 18px;
+
+    @media (max-width: 768px) {
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
+
   }
 
   .error {
@@ -90,7 +112,7 @@
   padding: 0 30px;
   height: 60px;
   transition: all .15s ease;
-  
+
   @media (max-width: 768px) {
     width: 100%;
   }
