--- a/src/components/YouTubeLink/YouTubeLink.module.scss
+++ b/src/components/YouTubeLink/YouTubeLink.module.scss
@@ -10,6 +10,10 @@
     padding: 7px 13px;
   }
 
+  @media (max-width: 768px) {
+    padding: 15px 20px;
+  }
+
   path {
     transition: all .15s ease;
   }
